--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url("img/kirpich.jpg");
+  background-image: url("img/beskonechnii-fon-7.jpg");
   background-color: white;
 }
 
