--- a/src/Auth/Auth.css
+++ b/src/Auth/Auth.css
@@ -15,6 +15,23 @@
     -o-transition: all 0.5s ease-out;
     -webkit-transition: all 0.5s ease-out;
 }
+.auth-big-content{
+    margin-top: 8%;
+    margin-left: 17%;
+    background-color: rgba(30,27,28, .7);
+    opacity: 90%;
+    width: 1150px;
+    height: 1150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10%;
+    border: none;
+    -moz-transition: all 0.5s ease-out;
+    -o-transition: all 0.5s ease-out;
+    -webkit-transition: all 0.5s ease-out;
+}
 .auth-content:hover{
     -webkit-transform: scale(1.05);
     -moz-transform: scale(1.05);
@@ -23,6 +40,36 @@
     cursor: pointer;
     border: 1px solid white;
 
+}
+.form-block{
+    display: flex;
+    align-items: center;
+    padding-left: 133px;
+    padding-right: 40px;
+    width: 800px;
+}
+.form-block h2{
+    width: 400px;
+}
+.form-block input{
+    width: 400px;
+    margin-left: 90px;
+}
+.adding-btn{
+    width: 300px;
+    height: 50px;
+    margin-top: 70px;
+    margin-left: -30px;
+}
+.adding-btn:hover{
+    color: white;
+    background-color: black;
+    cursor: pointer;
+    transition: 0.2s ease-out;
+    border-radius: 11px;
+}
+.add-forms h2{
+    color: black;
 }
 
 .auth-content h2{
@@ -67,5 +114,15 @@
     color: black;
     transition: 0.7s ease-in-out;
 
+}
+a{
+    color: white;
+    text-decoration: none;
+}
+
+.form-div input{
+    width: 300px;
+    height: 50px;
+    margin-left: 0px;
 }
 
